add stocks
