# routes/api.php
@@ -18,8 +18,9 @@ Route::middleware(['auth:sanctum','ForceJson','client.auth'])->group(function ()
     Route::get('/books',  [BooksController::class, 'index'])->name('books.index')->middleware('role:admin');
     Route::get('/books/{id}',  [BooksController::class, 'show'])->name('books.show')->middleware('role:admin');
     Route::post('/books', [BooksController::class, 'store'])->name('books.store')->middleware('role:admin');
-    Route::put('/books/{id}', [BooksController::class, 'update'])->name('books.update')->middleware('role:admin');
+    Route::post('/books/update/{id}', [BooksController::class, 'update'])->name('books.update')->middleware('role:admin');
     Route::delete('/books/{id}',  [BooksController::class, 'destroy'])->name('books.destroy')->middleware('role:admin');
+    Route::patch('/books/shelf/{id}', [BooksController::class, 'shelf'])->name('books.shelve')->middleware('role:admin');
 
-    Route::get('/admin-only', fn() => ['message'=>'👑 Admin only area']);
+    Route::get('/admin-only', fn() => ['message'=>' Admin only area']);
 });
